[build-system]
requires = [
	"setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "opu-analysis-lib"
description = "OPU anaysis for Raman single-cell spectroscopy data"
authors = [
	{name = "Guangyu Li", email = "gl343@cornell.edu"},
]
license = {text = "GNU General Public License v3"}
requires-python = ">=3.6"
classifiers = [
	"Programming Language :: Python :: 3",
]
dependencies = [
	"numpy",
	"scipy",
	"scikit-learn",
	"matplotlib",
	"skfeature-chappers @ git+https://github.com/lguangyu/scikit-feature.git",
	"mpllayout @ git+https://github.com/lguangyu/MatplotlibLayout.git",
]
dynamic = [
	"version",
	"readme",
]

[project.scripts]
opu_analysis = "opu_analysis_lib:OPUAnalysis.cli_main"
opu_transform_labspec_txt = "opu_analysis_lib:SpecFromLabspecTxt.cli_main"
opu_spectra_preview = "opu_analysis_lib:SpecPreview.cli_main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "opu_analysis_lib.__version__"}
readme = {file = "README.md"}