[metadata]
name = raman-opu-analysis
description = OPU anaysis for Raman single-cell spectroscopy data
long_description = file: README.md
version = attr: opu_analysis_lib.__version__
author = Guangyu Li
author_email = gl343@cornell.edu
license = GNU General Public License v3
#requires-python = ">=3.6"
classifiers =
	Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
	numpy
	scipy
	scikit-learn
	matplotlib
	skfeature-chappers @ git+https://github.com/lguangyu/scikit-feature.git
	mpllayout @ git+https://github.com/lguangyu/MatplotlibLayout.git

[options.entry_points]
console_scripts =
	opu_analysis = opu_analysis_lib:OPUAnalysis [cli_main]
	opu_transform_labspec_txt = opu_analysis_lib:SpecFromLabspecTxt [cli_main]
	opu_spectra_preview = opu_analysis_lib:SpecPreview [cli_main]
